Fix footer alignement regression

--- a/source/css/scss/_footer.scss
+++ b/source/css/scss/_footer.scss
@@ -79,6 +79,7 @@ footer {
     .col-footer-sub {
       align-self: center;
       justify-content: center;
+      text-align: center;
     }
 
     .col-footer-copyright {
